[gd_scene load_steps=6 format=3 uid="uid://jqcaoee85fv4"]

[ext_resource type="Texture2D" uid="uid://d3ya7n01pr2lb" path="res://assets/activation_plate_16-24px_off.png" id="1_adgfe"]
[ext_resource type="Script" path="res://scripts/activation_plate.gd" id="1_t6dfo"]
[ext_resource type="Texture2D" uid="uid://l4nbs13w1d4f" path="res://assets/activation_plate_16-24px_on.png" id="2_b1ftl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8mpoj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_adgfe")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_b1ftl")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4r82a"]
size = Vector2(2, 2)

[node name="ActivationPlate" type="Area2D"]
collision_layer = 32
collision_mask = 2
script = ExtResource("1_t6dfo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_8mpoj")
animation = &"off"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
texture_filter = 1
shape = SubResource("RectangleShape2D_4r82a")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
